@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2011 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -78,7 +78,8 @@ public class GetDirectoryEntries {
     public Blob run(DocumentModel doc) throws IOException {
         Directory directory = directoryService.getDirectory(directoryName, doc);
         try (Session session = directory.getSession()) {
-            DocumentModelList entries = session.query(new QueryBuilder(), false);
+            @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+            DocumentModelList entries = session.query(new QueryBuilder());
             String schemaName = directory.getSchema();
             Schema schema = schemaManager.getSchema(schemaName);
             List<Map<String, Object>> rows = new ArrayList<>();
@@ -111,7 +112,7 @@ public class GetDirectoryEntries {
         if (lang == null) {
             lang = "en";
         }
-        return new Locale(lang);
+        return Locale.of(lang);
     }
 
     protected String translate(String key) {
