@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2024 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -162,7 +162,8 @@ public class TestMultiTenantService {
         assertEquals(newDomain.getName(), newDomain.getPropertyValue(TENANT_ID_PROPERTY));
 
         try (Session session = directoryService.open(TENANTS_DIRECTORY)) {
-            DocumentModelList docs = session.query(new QueryBuilder(), false);
+            @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+            DocumentModelList docs = session.query(new QueryBuilder());
             assertEquals(2, docs.size());
             // order from directory is not fixed
             if (docs.get(0).getPropertyValue("tenant:id").equals("newDomain")) {
@@ -190,9 +191,10 @@ public class TestMultiTenantService {
         assertNotNull(acl);
 
         try (Session session = directoryService.open(TENANTS_DIRECTORY)) {
-            DocumentModelList docs = session.query(new QueryBuilder(), false);
+            @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+            DocumentModelList docs = session.query(new QueryBuilder());
             assertEquals(1, docs.size());
-            DocumentModel doc = docs.get(0);
+            DocumentModel doc = docs.getFirst();
             assertEquals(domain.getName(), doc.getPropertyValue("tenant:id"));
             assertEquals(domain.getTitle(), doc.getPropertyValue("tenant:label"));
         }
@@ -291,7 +293,7 @@ public class TestMultiTenantService {
 
             List<DocumentModel> groups = userManager.searchGroups((String) null);
             assertEquals(1, groups.size());
-            DocumentModel group = groups.get(0);
+            DocumentModel group = groups.getFirst();
             assertEquals("tenant_" + domain.getName() + "_testGroup", group.getPropertyValue("group:groupname"));
             assertEquals(domain.getName(), group.getPropertyValue("group:tenantId"));
         }
@@ -324,7 +326,7 @@ public class TestMultiTenantService {
             DocumentModel doc = frySession.getDocument(domain.getRef());
             ACP acp = doc.getACP();
             ACL acl = acp.getOrCreateACL();
-            acl.add(0, new ACE(nuxeoGroup.getName(), "Write", true));
+            acl.addFirst(new ACE(nuxeoGroup.getName(), "Write", true));
             doc.setACP(acp, true);
             frySession.saveDocument(doc);
             frySession.save();
