@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,9 +15,7 @@
  *
  * Contributors:
  *     Olivier Grisel
- *
  */
-
 package org.nuxeo.ecm.directory.ldap;
 
 import java.io.IOException;
@@ -53,6 +51,7 @@ import javax.naming.directory.SearchControls;
 import javax.naming.directory.SearchResult;
 import javax.naming.ldap.InitialLdapContext;
 
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -65,7 +64,6 @@ import org.nuxeo.ecm.core.api.RecoverableClientException;
 import org.nuxeo.ecm.core.api.impl.DocumentModelListImpl;
 import org.nuxeo.ecm.core.api.security.SecurityConstants;
 import org.nuxeo.ecm.core.query.sql.model.OrderByList;
-import org.nuxeo.ecm.core.query.sql.model.QueryBuilder;
 import org.nuxeo.ecm.core.schema.types.Field;
 import org.nuxeo.ecm.core.schema.types.SimpleTypeImpl;
 import org.nuxeo.ecm.core.schema.types.Type;
@@ -75,6 +73,7 @@ import org.nuxeo.ecm.directory.DirectoryException;
 import org.nuxeo.ecm.directory.DirectoryFieldMapper;
 import org.nuxeo.ecm.directory.EntryAdaptor;
 import org.nuxeo.ecm.directory.PasswordHelper;
+import org.nuxeo.ecm.directory.api.DirectoryQueryBuilder;
 
 /**
  * This class represents a session against an LDAPDirectory.
@@ -138,13 +137,22 @@ public class LDAPSession extends BaseSession {
         return dirContext;
     }
 
+    /**
+     * @implNote Do not execute generic code because LDAP directory does not handle in the same way the id, and it does
+     *           not seem to support multi tenancy
+     */
     @Override
     protected DocumentModel createEntryWithoutReferences(Map<String, Object> fieldMap) {
+        return doCreateEntryWithoutReferences(fieldMap);
+    }
+
+    @Override
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    protected DocumentModel doCreateEntryWithoutReferences(Map<String, Object> fieldMap) {
         // Make a copy of fieldMap to avoid modifying it
         fieldMap = new HashMap<>(fieldMap);
 
         LDAPDirectoryDescriptor descriptor = getDirectory().getDescriptor();
-        List<String> referenceFieldList = new LinkedList<>();
         try {
             String dn = String.format("%s=%s,%s", rdnAttribute, fieldMap.get(rdnField), descriptor.getCreationBaseDn());
             Attributes attrs = new BasicAttributes();
@@ -176,17 +184,14 @@ public class LDAPSession extends BaseSession {
                     attrs.put(attr);
                 } else if (getDirectory().isReference(fieldId)) {
                     List<org.nuxeo.ecm.directory.Reference> references = directory.getReferences(fieldId);
-                    if (references.size() > 1) {
-                        // not supported
-                    } else {
-                        org.nuxeo.ecm.directory.Reference reference = references.get(0);
+                    if (references.size() == 1) { // only supported option
+                        org.nuxeo.ecm.directory.Reference reference = references.getFirst();
                         if (reference instanceof LDAPReference) {
                             attr = new BasicAttribute(((LDAPReference) reference).getStaticAttributeId());
                             attr.add(descriptor.getEmptyRefMarker());
                             attrs.put(attr);
                         }
                     }
-                    referenceFieldList.add(fieldId);
                 } else if (LDAPDirectory.DN_SPECIAL_ATTRIBUTE_KEY.equals(backendFieldId)) {
                     // ignore special DN field
                     log.warn("field: {} is mapped to read only DN field: ignored", fieldId);
@@ -228,7 +233,8 @@ public class LDAPSession extends BaseSession {
     }
 
     @Override
-    protected List<String> updateEntryWithoutReferences(DocumentModel docModel) {
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    protected List<String> doUpdateEntryWithoutReferences(DocumentModel docModel) {
         List<String> updateList = new ArrayList<>();
         List<String> referenceFieldList = new LinkedList<>();
         Map<String, Field> schemaFieldMap = directory.getSchemaFieldMap();
@@ -300,23 +306,24 @@ public class LDAPSession extends BaseSession {
     }
 
     @Override
-    public void deleteEntryWithoutReferences(String id) {
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    public void doDeleteEntryWithoutReferences(String entryId) {
         try {
-            SearchResult result = getLdapEntry(id, false);
+            SearchResult result = getLdapEntry(entryId, false);
 
-            log.debug("LDAPSession.deleteEntry({}): LDAP destroySubcontext dn='{}' [{}]", id,
+            log.debug("LDAPSession.deleteEntry({}): LDAP destroySubcontext dn='{}' [{}]", entryId,
                     result.getNameInNamespace(), this);
             getContext().destroySubcontext(result.getNameInNamespace());
         } catch (NamingException e) {
-            handleException(e, "deleteEntry failed for: " + id);
+            handleException(e, "deleteEntry failed for: " + entryId);
         }
     }
 
     @Override
-    public boolean hasEntry(String id) {
+    public boolean hasEntry(String idOrSysId) {
         try {
             // TODO: check directory cache first
-            return getLdapEntry(id) != null;
+            return getLdapEntry(idOrSysId) != null;
         } catch (NamingException e) {
             throw new DirectoryException("hasEntry failed: " + e.getMessage(), e);
         }
@@ -396,13 +403,13 @@ public class LDAPSession extends BaseSession {
     }
 
     @Override
-    public DocumentModel getEntryFromSource(String id, boolean fetchReferences) {
+    public DocumentModel getEntryFromSource(String idOrSysId, boolean fetchReferences) {
         try {
-            SearchResult result = getLdapEntry(id, false);
+            SearchResult result = getLdapEntry(idOrSysId, false);
             if (result == null) {
                 return null;
             }
-            return ldapResultToDocumentModel(result, id, fetchReferences);
+            return ldapResultToDocumentModel(result, idOrSysId, fetchReferences);
         } catch (NamingException e) {
             throw new DirectoryException("getEntry failed: " + e.getMessage(), e);
         }
@@ -449,15 +456,15 @@ public class LDAPSession extends BaseSession {
                     currentFilter.append(backendFieldName).append("=");
                     if (fulltext.contains(fieldName)) {
                         switch (substringMatchType) {
-                        case subinitial:
-                            currentFilter.append("{").append(index).append("}*");
-                            break;
-                        case subfinal:
-                            currentFilter.append("*{").append(index).append("}");
-                            break;
-                        case subany:
-                            currentFilter.append("*{").append(index).append("}*");
-                            break;
+                            case subinitial:
+                                currentFilter.append("{").append(index).append("}*");
+                                break;
+                            case subfinal:
+                                currentFilter.append("*{").append(index).append("}");
+                                break;
+                            case subany:
+                                currentFilter.append("*{").append(index).append("}*");
+                                break;
                         }
                     } else {
                         currentFilter.append("{").append(index).append("}");
@@ -511,14 +518,14 @@ public class LDAPSession extends BaseSession {
     }
 
     @Override
-    public DocumentModelList query(QueryBuilder queryBuilder, boolean fetchReferences) {
+    @SuppressWarnings("deprecation") // annotation to remove
+    protected DocumentModelList doQuery(DirectoryQueryBuilder queryBuilder) {
         if (!hasPermission(SecurityConstants.READ)) {
             return new DocumentModelListImpl();
         }
         if (FieldDetector.hasField(queryBuilder.predicate(), getPasswordField())) {
             throw new DirectoryException("Cannot filter on password");
         }
-        queryBuilder = addTenantId(queryBuilder);
 
         // build filter from query
         LDAPFilterBuilder builder = new LDAPFilterBuilder(getDirectory());
@@ -540,7 +547,7 @@ public class LDAPSession extends BaseSession {
         try {
             NamingEnumeration<SearchResult> results = getContext().search(searchBaseDn, filter, filterParams.toArray(),
                     scts);
-            DocumentModelList entries = ldapResultsToDocumentModels(results, fetchReferences);
+            DocumentModelList entries = ldapResultsToDocumentModels(results, queryBuilder.fetchReferences());
             if (!orderBy.isEmpty()) {
                 getDirectory().orderEntries(entries, orderBy);
             }
@@ -566,14 +573,14 @@ public class LDAPSession extends BaseSession {
     }
 
     @Override
-    public List<String> queryIds(QueryBuilder queryBuilder) {
+    @SuppressWarnings("deprecation") // annotation to remove
+    protected List<String> doQueryIds(DirectoryQueryBuilder queryBuilder) {
         if (!hasPermission(SecurityConstants.READ)) {
             return Collections.emptyList();
         }
         if (FieldDetector.hasField(queryBuilder.predicate(), getPasswordField())) {
             throw new DirectoryException("Cannot filter on password");
         }
-        queryBuilder = addTenantId(queryBuilder);
 
         // build filter from query
         LDAPFilterBuilder builder = new LDAPFilterBuilder(getDirectory());
@@ -632,7 +639,7 @@ public class LDAPSession extends BaseSession {
     protected DocumentModel fieldMapToDocumentModel(Map<String, Object> fieldMap) {
         String id = String.valueOf(fieldMap.get(getIdField()));
         try {
-            DocumentModel docModel = BaseSession.createEntryModel(schemaName, id, fieldMap, isReadOnly());
+            DocumentModel docModel = createEntryModel(id, fieldMap);
             EntryAdaptor adaptor = getDirectory().getDescriptor().getEntryAdaptor();
             if (adaptor != null) {
                 docModel = adaptor.adapt(directory, docModel);
@@ -671,7 +678,7 @@ public class LDAPSession extends BaseSession {
         if ("string".equals(typeName)) {
             return trimmedValue;
         } else if ("integer".equals(typeName) || "long".equals(typeName)) {
-            if ("".equals(trimmedValue)) {
+            if (StringUtils.isBlank(trimmedValue)) {
                 return defaultValue;
             }
             try {
@@ -706,7 +713,7 @@ public class LDAPSession extends BaseSession {
                 }
             }
         } else if ("date".equals(typeName)) {
-            if ("".equals(trimmedValue)) {
+            if (StringUtils.isBlank(trimmedValue)) {
                 return defaultValue;
             }
             try {
@@ -835,22 +842,20 @@ public class LDAPSession extends BaseSession {
         }
         for (String fieldName : directory.getSchemaFieldMap().keySet()) {
             List<org.nuxeo.ecm.directory.Reference> references = directory.getReferences(fieldName);
-            if (references != null && references.size() > 0) {
+            if (CollectionUtils.isNotEmpty(references)) {
                 if (fetchReferences) {
                     Map<String, List<String>> referencedIdsMap = new HashMap<>();
                     for (org.nuxeo.ecm.directory.Reference reference : references) {
                         // reference resolution
                         List<String> referencedIds;
-                        if (reference instanceof LDAPReference) {
+                        if (reference instanceof LDAPReference ldapReference) {
                             // optim: use the current LDAPSession directly to
                             // provide the LDAP reference with the needed backend entries
-                            LDAPReference ldapReference = (LDAPReference) reference;
                             referencedIds = ldapReference.getLdapTargetIds(attributes);
-                        } else if (reference instanceof LDAPTreeReference) {
+                        } else if (reference instanceof LDAPTreeReference ldapReference) {
                             // TODO: optimize using the current LDAPSession
                             // directly to provide the LDAP reference with the
                             // needed backend entries (needs to implement getLdapTargetIds)
-                            LDAPTreeReference ldapReference = (LDAPTreeReference) reference;
                             referencedIds = ldapReference.getTargetIdsForSource(entryId);
                         } else {
                             referencedIds = reference.getTargetIdsForSource(entryId);
@@ -913,7 +918,7 @@ public class LDAPSession extends BaseSession {
     @Override
     public boolean authenticate(String username, String password) {
 
-        if (password == null || "".equals(password.trim())) {
+        if (StringUtils.isBlank(password)) {
             // never use anonymous bind as a way to authenticate a user in
             // Nuxeo EP
             return false;
