@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2017-2024 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2017-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,7 @@
  */
 package org.nuxeo.directory.mongodb;
 
-import static jakarta.servlet.http.HttpServletResponse.SC_CONFLICT;
+import static java.util.Comparator.naturalOrder;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.nuxeo.directory.mongodb.MongoDBSerializationHelper.MONGODB_ID;
 import static org.nuxeo.directory.mongodb.MongoDBSerializationHelper.MONGODB_SEQ;
@@ -26,7 +26,6 @@ import static org.nuxeo.directory.mongodb.MongoDBSerializationHelper.MONGODB_SEQ
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -62,6 +61,7 @@ import org.nuxeo.ecm.directory.OperationNotAllowedException;
 import org.nuxeo.ecm.directory.PasswordHelper;
 import org.nuxeo.ecm.directory.Reference;
 import org.nuxeo.ecm.directory.Session;
+import org.nuxeo.ecm.directory.api.DirectoryQueryBuilder;
 
 import com.mongodb.MongoWriteException;
 import com.mongodb.client.FindIterable;
@@ -92,31 +92,24 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    public DocumentModel getEntryFromSource(String id, boolean fetchReferences) {
-        String idFieldName = getPrefixedIdField();
-        DocumentModelList result = doQuery(Collections.singletonMap(idFieldName, id), Collections.emptySet(),
-                Collections.emptyMap(), fetchReferences, 1, 0, false);
+    protected DocumentModel createEntryWithoutReferences(Map<String, Object> fieldMap) {
+        fieldMap = new HashMap<>(fieldMap); // be sure it is modifiable
+        // generate id if auto increment is turned on
+        if (autoincrementId) {
+            Document filter = MongoDBSerializationHelper.fieldMapToBson(MONGODB_ID, directoryName);
+            Bson update = Updates.inc(MONGODB_SEQ, 1L);
+            FindOneAndUpdateOptions options = new FindOneAndUpdateOptions().returnDocument(ReturnDocument.AFTER);
+            Long longId = getCountersCollection().findOneAndUpdate(filter, update, options).getLong(MONGODB_SEQ);
 
-        if (result.isEmpty()) {
-            return null;
+            String idFieldName = getPrefixedIdField();
+            fieldMap.put(idFieldName, longId);
         }
-
-        DocumentModel docModel = result.getFirst();
-        if (isMultiTenant()) {
-            // check that the entry is from the current tenant, or no tenant
-            // at all
-            if (!checkEntryTenantId((String) docModel.getProperty(schemaName, TENANT_ID_FIELD))) {
-                return null;
-            }
-        }
-        return docModel;
+        return super.createEntryWithoutReferences(fieldMap);
     }
 
     @Override
-    protected DocumentModel createEntryWithoutReferences(Map<String, Object> fieldMap) {
-        // Make a copy of fieldMap to avoid modifying it
-        fieldMap = new HashMap<>(fieldMap);
-
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    protected DocumentModel doCreateEntryWithoutReferences(Map<String, Object> fieldMap) {
         // Filter out reference fields for creation as we keep it in a different collection
         Map<String, Object> newDocMap = fieldMap.entrySet()
                                                 .stream()
@@ -124,49 +117,7 @@ public class MongoDBSession extends BaseSession {
                                                 .collect(HashMap::new, (m, v) -> m.put(v.getKey(), v.getValue()),
                                                         HashMap::putAll);
         Map<String, Field> schemaFieldMap = directory.getSchemaFieldMap();
-        String idFieldName = getPrefixedIdField();
-        String id;
-        if (autoincrementId) {
-            Document filter = MongoDBSerializationHelper.fieldMapToBson(MONGODB_ID, directoryName);
-            Bson update = Updates.inc(MONGODB_SEQ, 1L);
-            FindOneAndUpdateOptions options = new FindOneAndUpdateOptions().returnDocument(ReturnDocument.AFTER);
-            Long longId = getCountersCollection().findOneAndUpdate(filter, update, options).getLong(MONGODB_SEQ);
-            fieldMap.put(idFieldName, longId);
-            newDocMap.put(idFieldName, longId);
-            id = String.valueOf(longId);
-        } else {
-            Object rawId = fieldMap.get(idFieldName);
-            if (rawId == null) {
-                throw new DirectoryException("Missing id");
-            }
-            id = String.valueOf(rawId);
-            if (StringUtils.isBlank(id)) {
-                throw new DirectoryException("Missing id");
-            }
-        }
-
-        if (isMultiTenant()) {
-            String tenantId = getCurrentTenantId();
-            if (StringUtils.isNotBlank(tenantId)) {
-                fieldMap.put(TENANT_ID_FIELD, tenantId);
-                newDocMap.put(TENANT_ID_FIELD, tenantId);
-                if (computeMultiTenantId) {
-                    id = computeMultiTenantDirectoryId(tenantId, id);
-                    fieldMap.put(idFieldName, id);
-                    newDocMap.put(idFieldName, id);
-                }
-            }
-        }
-
-        // Check if the entry already exists
-        if (hasEntry0(id)) {
-            throw new DirectoryException(
-                    String.format("Entry with id %s already exists in directory %s", id, directory.getName()),
-                    SC_CONFLICT);
-        }
-
         try {
-
             for (Map.Entry<String, Field> entry : schemaFieldMap.entrySet()) {
                 Field field = entry.getValue();
                 if (field != null) {
@@ -190,7 +141,9 @@ public class MongoDBSession extends BaseSession {
         } catch (MongoWriteException e) {
             throw new DirectoryException(e);
         }
-        return createEntryModel(null, schemaName, String.valueOf(fieldMap.get(idFieldName)), fieldMap, isReadOnly());
+        String idFieldName = getPrefixedIdField();
+        String id = String.valueOf(fieldMap.get(idFieldName));
+        return createEntryModel(id, fieldMap);
     }
 
     protected Object convertToType(Object value, Type type) {
@@ -212,7 +165,8 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    protected List<String> updateEntryWithoutReferences(DocumentModel docModel) {
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    protected List<String> doUpdateEntryWithoutReferences(DocumentModel docModel) {
         Map<String, Object> fieldMap = new HashMap<>();
         List<String> referenceFieldList = new LinkedList<>();
 
@@ -240,7 +194,8 @@ public class MongoDBSession extends BaseSession {
             if (fieldName.equals(idFieldName)) {
                 continue;
             }
-            Property prop = docModel.getPropertyObject(schemaName, fieldName);
+            Property prop = fieldName.contains(":") ? docModel.getProperty(fieldName)
+                    : docModel.getPropertyObject(schemaName, fieldName);
             if (prop == null || !prop.isDirty()
                     || (fieldName.equals(passwordFieldName) && StringUtils.isEmpty((String) prop.getValue()))) {
                 continue;
@@ -288,10 +243,11 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    public void deleteEntryWithoutReferences(String id) {
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+    public void doDeleteEntryWithoutReferences(String entryId) {
         try {
             String idFieldName = getPrefixedIdField();
-            Object idFieldValue = convertToType(id, getIdFieldType());
+            Object idFieldValue = convertToType(entryId, getIdFieldType());
             DeleteResult result = getCollection().deleteOne(
                     MongoDBSerializationHelper.fieldMapToBson(idFieldName, idFieldValue));
             if (!result.wasAcknowledged()) {
@@ -357,7 +313,7 @@ public class MongoDBSession extends BaseSession {
                         targetIds = reference.getTargetIdsForSource(doc.getId());
                     }
                     targetIds = new ArrayList<>(targetIds);
-                    Collections.sort(targetIds);
+                    targetIds.sort(naturalOrder());
                     String fieldName = reference.getFieldName();
                     targetIdsMap.computeIfAbsent(fieldName, key -> new ArrayList<>()).addAll(targetIds);
                 }
@@ -426,7 +382,8 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    public DocumentModelList query(QueryBuilder queryBuilder, boolean fetchReferences) {
+    @SuppressWarnings("deprecation") // annotation to remove
+    protected DocumentModelList doQuery(DirectoryQueryBuilder queryBuilder) {
         if (!hasPermission(SecurityConstants.READ)) {
             return new DocumentModelListImpl();
         }
@@ -435,7 +392,6 @@ public class MongoDBSession extends BaseSession {
                 || FieldDetector.hasField(queryBuilder.predicate(), passwordFieldName)) {
             throw new DirectoryException("Cannot filter on password");
         }
-        queryBuilder = addTenantId(queryBuilder);
 
         MongoDBDirectoryQueryBuilder builder = new MongoDBDirectoryQueryBuilder(CONVERTER, queryBuilder);
         builder.walk();
@@ -466,7 +422,7 @@ public class MongoDBSession extends BaseSession {
                 }
                 DocumentModel docModel = fieldMapToDocumentModel(fieldMap);
 
-                if (fetchReferences) {
+                if (queryBuilder.fetchReferences()) {
                     Map<String, List<String>> targetIdsMap = new HashMap<>();
                     for (Reference reference : directory.getReferences()) {
                         List<String> targetIds;
@@ -476,7 +432,7 @@ public class MongoDBSession extends BaseSession {
                             targetIds = reference.getTargetIdsForSource(docModel.getId());
                         }
                         targetIds = new ArrayList<>(targetIds);
-                        Collections.sort(targetIds);
+                        targetIds.sort(naturalOrder());
                         String fieldName = reference.getFieldName();
                         targetIdsMap.computeIfAbsent(fieldName, key -> new ArrayList<>()).addAll(targetIds);
                     }
@@ -503,15 +459,15 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    public List<String> queryIds(QueryBuilder queryBuilder) {
+    @SuppressWarnings("deprecation") // annotation to remove
+    protected List<String> doQueryIds(DirectoryQueryBuilder queryBuilder) {
         if (!hasPermission(SecurityConstants.READ)) {
-            return Collections.emptyList();
+            return List.of();
         }
         if (FieldDetector.hasField(queryBuilder.predicate(), getPasswordField())
                 || FieldDetector.hasField(queryBuilder.predicate(), getPrefixedPasswordField())) {
             throw new DirectoryException("Cannot filter on password");
         }
-        queryBuilder = addTenantId(queryBuilder);
 
         MongoDBDirectoryQueryBuilder builder = new MongoDBDirectoryQueryBuilder(CONVERTER, queryBuilder);
         builder.walk();
@@ -599,15 +555,12 @@ public class MongoDBSession extends BaseSession {
     }
 
     @Override
-    public boolean hasEntry(String id) {
-        return hasEntry0(id);
-    }
-
-    protected boolean hasEntry0(Object id) {
-        String idFieldName = getPrefixedIdField();
-        Type idFieldType = getIdFieldType();
-        Object idFieldValue = convertToType(id, idFieldType);
-        return getCollection().countDocuments(MongoDBSerializationHelper.fieldMapToBson(idFieldName, idFieldValue)) > 0;
+    public boolean hasEntry(String idOrSysId) {
+        var queryBuilder = createQueryBuilderForIds(idOrSysId);
+        var builder = new MongoDBDirectoryQueryBuilder(CONVERTER, queryBuilder);
+        builder.walk();
+        Document filter = builder.getFilter();
+        return getCollection().countDocuments(filter) > 0;
     }
 
     /**
@@ -634,7 +587,7 @@ public class MongoDBSession extends BaseSession {
             idFieldName = getIdField();
         }
         String id = String.valueOf(fieldMap.get(idFieldName));
-        return createEntryModel(null, schemaName, id, fieldMap, isReadOnly());
+        return createEntryModel(id, fieldMap);
     }
 
     protected String getIdFromState(State state) {
@@ -651,20 +604,8 @@ public class MongoDBSession extends BaseSession {
         return isBlank(tenantId) || isBlank(entryTenantId) || tenantId.equals(entryTenantId);
     }
 
-    protected String getPrefixedIdField() {
-        Field idField = directory.getSchemaFieldMap().get(getIdField());
-        if (idField == null) {
-            return null;
-        }
-        return idField.getName().getPrefixedName();
-    }
-
     protected String getPrefixedPasswordField() {
-        Field passwordField = directory.getSchemaFieldMap().get(getPasswordField());
-        if (passwordField == null) {
-            return null;
-        }
-        return passwordField.getName().getPrefixedName();
+        return getPrefixedFieldName(getPasswordField());
     }
 
     protected Type getIdFieldType() {
