@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2014 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2014-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,20 +15,18 @@
  *
  * Contributors:
  *     Florent Guillaume
- *
  */
-
 package org.nuxeo.ecm.directory.multi;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -92,7 +90,7 @@ public class TestMultiDirectoryOptional {
         desc1 = new MemoryDirectoryDescriptor();
         desc1.name = "dir1";
         desc1.schemaName = "schema1";
-        desc1.schemaSet = new HashSet<>(Arrays.asList("uid", "password", "foo"));
+        desc1.schemaSet = new HashSet<>(List.of("uid", "password", "foo"));
         desc1.idField = "uid";
         desc1.passwordField = "password";
         directoryService.registerDirectoryDescriptor(desc1);
@@ -115,7 +113,7 @@ public class TestMultiDirectoryOptional {
         desc2 = new MemoryDirectoryDescriptor();
         desc2.name = "dir2";
         desc2.schemaName = "schema2";
-        desc2.schemaSet = new HashSet<>(Arrays.asList("id", "bar"));
+        desc2.schemaSet = new HashSet<>(List.of("id", "bar"));
         desc2.idField = "id";
         desc2.passwordField = null;
         directoryService.registerDirectoryDescriptor(desc2);
@@ -136,7 +134,7 @@ public class TestMultiDirectoryOptional {
         desc3 = new MemoryDirectoryDescriptor();
         desc3.name = "dir3";
         desc3.schemaName = "schema3";
-        desc3.schemaSet = new HashSet<>(Arrays.asList("uid", "thepass", "thefoo", "thebar"));
+        desc3.schemaSet = new HashSet<>(List.of("uid", "thepass", "thefoo", "thebar"));
         desc3.idField = "uid";
         desc3.passwordField = "thepass";
         directoryService.registerDirectoryDescriptor(desc3);
@@ -174,18 +172,19 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testDirectoryOptionalInvalid() throws Exception {
+    public void testDirectoryOptionalInvalid() {
         MultiDirectory multiDir = (MultiDirectory) directoryService.getDirectory("multiOptionalInvalid");
         try (MultiDirectorySession dir = multiDir.getSession()) {
             // invalid config => will throw an exception
-            dir.query(null);
+            dir.query((Map<String, Serializable>) null);
             fail("Should have raised an DirectoryException");
         } catch (DirectoryException e) {
+            // expected
         }
     }
 
     @Test
-    public void testGetEntry() throws Exception {
+    public void testGetEntry() {
         DocumentModel entry;
         entry = dir.getEntry("1");
         assertEquals("1", entry.getProperty("schema3", "uid"));
@@ -208,16 +207,16 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testCreate() throws Exception {
+    public void testCreate() {
         try (Session dir1 = memdir1.getSession();
                 Session dir2 = memdir2.getSession();
                 Session dir3 = memdir3.getSession()) {
             // multi-subdir create
-            Map<String, Object> map = new HashMap<>();
-            map.put("uid", "5");
-            map.put("thefoo", "foo5");
-            map.put("thebar", "bar5");
-            DocumentModel entry = dir.createEntry(map);
+            var map1 = new HashMap<String, Object>();
+            map1.put("uid", "5");
+            map1.put("thefoo", "foo5");
+            map1.put("thebar", "bar5");
+            DocumentModel entry = dir.createEntry(map1);
             assertEquals("5", entry.getProperty("schema3", "uid"));
             assertEquals("foo5", entry.getProperty("schema3", "thefoo"));
             assertEquals("bar5", entry.getProperty("schema3", "thebar"));
@@ -236,18 +235,16 @@ public class TestMultiDirectoryOptional {
             assertNull(dir3.getEntry("5"));
 
             // create another with colliding id
-            map = new HashMap<>();
-            map.put("uid", "5");
-            try {
-                entry = dir.createEntry(map);
-                fail("Should raise an error, entry already exists");
-            } catch (DirectoryException e) {
-            }
+            var map2 = new HashMap<String, Object>();
+            map2.put("uid", "5");
+
+            assertThrows("Should raise an error, entry already exists", DirectoryException.class,
+                    () -> dir.createEntry(map2));
         }
     }
 
     @Test
-    public void testAuthenticate() throws Exception {
+    public void testAuthenticate() {
         // sub dirs
         try (Session dir1 = memdir1.getSession(); Session dir3 = memdir3.getSession()) {
             // cannot authenticate using default value on sub directory directly
@@ -267,7 +264,7 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testUpdateEntry() throws Exception {
+    public void testUpdateEntry() {
         try (Session dir1 = memdir1.getSession();
                 Session dir2 = memdir2.getSession();
                 Session dir3 = memdir3.getSession()) {
@@ -309,12 +306,13 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testDeleteEntry() throws Exception {
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, annotation to remove
+    public void testDeleteEntry() {
         try (Session dir1 = memdir1.getSession();
                 Session dir2 = memdir2.getSession();
                 Session dir3 = memdir3.getSession()) {
             dir.deleteEntry("no-such-entry");
-            assertEquals(4, dir.query(new QueryBuilder(), false).size());
+            assertEquals(4, dir.query(new QueryBuilder()).size());
             assertEquals(2, dir1.queryIds(new QueryBuilder()).size());
             assertEquals(2, dir2.queryIds(new QueryBuilder()).size());
             assertEquals(2, dir3.queryIds(new QueryBuilder()).size());
@@ -334,7 +332,7 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testReadOnlyEntryFromGetEntry() throws Exception {
+    public void testReadOnlyEntryFromGetEntry() {
         memdir1.setReadOnly(false);
         memdir2.setReadOnly(true);
         memdir3.setReadOnly(true);
@@ -361,7 +359,7 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testQuery() throws Exception {
+    public void testQuery() {
         Map<String, Serializable> filter = new HashMap<>();
         DocumentModelList entries;
         DocumentModel e;
@@ -381,14 +379,14 @@ public class TestMultiDirectoryOptional {
         filter.put("thefoo", "defaultFooValue");
         entries = dir.query(filter);
         assertEquals(1, entries.size());
-        e = entries.get(0);
+        e = entries.getFirst();
         assertEquals("1", e.getId());
         assertEquals("bar1", e.getProperty("schema3", "thebar"));
         // simple source
         filter.put("thefoo", "foo3");
         entries = dir.query(filter);
         assertEquals(1, entries.size());
-        e = entries.get(0);
+        e = entries.getFirst();
         assertEquals("3", e.getId());
         assertEquals("bar3", e.getProperty("schema3", "thebar"));
 
@@ -397,7 +395,7 @@ public class TestMultiDirectoryOptional {
         filter.put("thebar", "bar1");
         entries = dir.query(filter);
         assertEquals(1, entries.size());
-        e = entries.get(0);
+        e = entries.getFirst();
         assertEquals("1", e.getId());
         assertEquals("defaultFooValue", e.getProperty("schema3", "thefoo"));
         assertEquals("bar1", e.getProperty("schema3", "thebar"));
@@ -428,20 +426,20 @@ public class TestMultiDirectoryOptional {
     }
 
     @Test
-    public void testGetProjection() throws Exception {
+    public void testGetProjection() {
         Map<String, Serializable> filter = new HashMap<>();
         List<String> list;
 
         // empty filter means everything (like getEntries)
         list = dir.getProjection(filter, "uid");
         Collections.sort(list);
-        assertEquals(Arrays.asList("1", "2", "3", "4"), list);
+        assertEquals(List.of("1", "2", "3", "4"), list);
         list = dir.getProjection(filter, "thefoo");
         Collections.sort(list);
-        assertEquals(Arrays.asList("defaultFooValue", "foo2", "foo3", "foo4"), list);
+        assertEquals(List.of("defaultFooValue", "foo2", "foo3", "foo4"), list);
         list = dir.getProjection(filter, "thebar");
         Collections.sort(list);
-        assertEquals(Arrays.asList("bar1", "bar2", "bar3", "bar4"), list);
+        assertEquals(List.of("bar1", "bar2", "bar3", "bar4"), list);
 
         // XXX test projection on unknown column
 
@@ -458,29 +456,29 @@ public class TestMultiDirectoryOptional {
         // source with two subdirs
         filter.put("thefoo", "defaultFooValue");
         list = dir.getProjection(filter, "uid");
-        assertEquals(Arrays.asList("1"), list);
+        assertEquals(List.of("1"), list);
         list = dir.getProjection(filter, "thefoo");
-        assertEquals(Arrays.asList("defaultFooValue"), list);
+        assertEquals(List.of("defaultFooValue"), list);
         list = dir.getProjection(filter, "thebar");
-        assertEquals(Arrays.asList("bar1"), list);
+        assertEquals(List.of("bar1"), list);
         // simple source
         filter.put("thefoo", "foo3");
         list = dir.getProjection(filter, "uid");
-        assertEquals(Arrays.asList("3"), list);
+        assertEquals(List.of("3"), list);
         list = dir.getProjection(filter, "thefoo");
-        assertEquals(Arrays.asList("foo3"), list);
+        assertEquals(List.of("foo3"), list);
         list = dir.getProjection(filter, "thebar");
-        assertEquals(Arrays.asList("bar3"), list);
+        assertEquals(List.of("bar3"), list);
 
         // query matching two subdirectories in one source
         filter.put("thefoo", "defaultFooValue");
         filter.put("thebar", "bar1");
         list = dir.getProjection(filter, "uid");
-        assertEquals(Arrays.asList("1"), list);
+        assertEquals(List.of("1"), list);
         list = dir.getProjection(filter, "thefoo");
-        assertEquals(Arrays.asList("defaultFooValue"), list);
+        assertEquals(List.of("defaultFooValue"), list);
         list = dir.getProjection(filter, "thebar");
-        assertEquals(Arrays.asList("bar1"), list);
+        assertEquals(List.of("bar1"), list);
 
         // query not matching although each subdirectory in the source matches
         filter.put("thefoo", "defaultFooValue");
@@ -504,18 +502,17 @@ public class TestMultiDirectoryOptional {
         filter.put("thefoo", "matchme");
         list = dir.getProjection(filter, "uid");
         Collections.sort(list);
-        assertEquals(Arrays.asList("1", "3"), list);
+        assertEquals(List.of("1", "3"), list);
         list = dir.getProjection(filter, "thefoo");
-        assertEquals(Arrays.asList("matchme", "matchme"), list);
+        assertEquals(List.of("matchme", "matchme"), list);
         list = dir.getProjection(filter, "thebar");
         Collections.sort(list);
-        assertEquals(Arrays.asList("bar1", "bar3"), list);
+        assertEquals(List.of("bar1", "bar3"), list);
     }
 
     @Test
-    public void testCreateFromModel() throws Exception {
-        String schema = "schema3";
-        DocumentModel entry = BaseSession.createEntryModel(null, schema, null, null);
+    public void testCreateFromModel() {
+        DocumentModel entry = dir.createEntryModel();
         entry.setProperty("schema3", "uid", "yo");
 
         assertNull(dir.getEntry("yo"));
@@ -524,15 +521,12 @@ public class TestMultiDirectoryOptional {
 
         // create one with existing same id, must fail
         entry.setProperty("schema3", "uid", "1");
-        try {
-            entry = dir.createEntry(entry);
-            fail("Should raise an error, entry already exists");
-        } catch (DirectoryException e) {
-        }
+        assertThrows("Should raise an error, entry already exists", DirectoryException.class,
+                () -> dir.createEntry(entry));
     }
 
     @Test
-    public void testHasEntry() throws Exception {
+    public void testHasEntry() {
         assertTrue(dir.hasEntry("1"));
         assertFalse(dir.hasEntry("foo"));
     }
