@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2017-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2017-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,10 @@
  * Contributors:
  *     George Lefter
  *     Funsho David
- *
  */
-
 package org.nuxeo.directory.test;
 
+import static jakarta.servlet.http.HttpServletResponse.SC_CONFLICT;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
@@ -28,9 +27,9 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
+import static org.nuxeo.ecm.directory.api.DirectoryConstants.SYSTEM_SCHEMA;
 
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.HashMap;
@@ -42,6 +41,7 @@ import java.util.stream.Collectors;
 
 import jakarta.inject.Inject;
 
+import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Ignore;
 import org.junit.Test;
@@ -55,7 +55,6 @@ import org.nuxeo.ecm.core.test.annotations.Granularity;
 import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
 import org.nuxeo.ecm.directory.AbstractDirectory;
 import org.nuxeo.ecm.directory.BaseDirectoryDescriptor;
-import org.nuxeo.ecm.directory.BaseSession;
 import org.nuxeo.ecm.directory.Directory;
 import org.nuxeo.ecm.directory.DirectoryException;
 import org.nuxeo.ecm.directory.PasswordHelper;
@@ -103,7 +102,7 @@ public abstract class AbstractDirectoryTest {
                 calendar.get(Calendar.SECOND), 0);
     }
 
-    public static void assertCalendarEquals(Calendar expected, Calendar actual) throws Exception {
+    public static void assertCalendarEquals(Calendar expected, Calendar actual) {
         if (expected.equals(actual)) {
             return;
         }
@@ -123,10 +122,10 @@ public abstract class AbstractDirectoryTest {
     }
 
     @Test
-    public void testReference() throws Exception {
+    public void testReference() {
         List<Reference> references = directoryService.getDirectory(GROUP_DIR).getReferences("members");
         assertEquals(1, references.size());
-        Reference membersRef = references.get(0);
+        Reference membersRef = references.getFirst();
 
         // test initial configuration
         List<String> administrators = membersRef.getTargetIdsForSource("administrators");
@@ -142,7 +141,7 @@ public abstract class AbstractDirectoryTest {
         assertTrue(administrators.contains("user_1"));
 
         // reading the same link should not duplicate it
-        membersRef.addLinks("administrators", Arrays.asList("user_1", "user_2"));
+        membersRef.addLinks("administrators", List.of("user_1", "user_2"));
 
         administrators = membersRef.getTargetIdsForSource("administrators");
         assertEquals(3, administrators.size());
@@ -164,13 +163,13 @@ public abstract class AbstractDirectoryTest {
 
         // read references with the set* methods
 
-        membersRef.setTargetIdsForSource("administrators", Arrays.asList("user_1", "user_2"));
+        membersRef.setTargetIdsForSource("administrators", List.of("user_1", "user_2"));
         administrators = membersRef.getTargetIdsForSource("administrators");
         assertEquals(2, administrators.size());
         assertTrue(administrators.contains("user_1"));
         assertTrue(administrators.contains("user_2"));
 
-        membersRef.setTargetIdsForSource("administrators", Arrays.asList("user_1", "Administrator"));
+        membersRef.setTargetIdsForSource("administrators", List.of("user_1", "Administrator"));
         administrators = membersRef.getTargetIdsForSource("administrators");
         assertEquals(2, administrators.size());
         assertTrue(administrators.contains("user_1"));
@@ -200,13 +199,14 @@ public abstract class AbstractDirectoryTest {
             map.put("password", "pass_0");
             map.put("intField", 5L);
             map.put("dateField", getCalendar(1982, 3, 25, 16, 30, 47, 0));
-            map.put("groups", Arrays.asList("members", "administrators"));
+            map.put("groups", List.of("members", "administrators"));
             DocumentModel dm = session.createEntry(map);
             assertNotNull(dm);
 
             assertEquals("user_0", dm.getId());
 
             String[] schemaNames = dm.getSchemas();
+            schemaNames = ArrayUtils.removeElement(schemaNames, SYSTEM_SCHEMA); // remove system schema if present
             assertEquals(1, schemaNames.length);
 
             assertEquals(SCHEMA, schemaNames[0]);
@@ -234,6 +234,7 @@ public abstract class AbstractDirectoryTest {
             assertEquals("user_0", dm.getId());
 
             String[] schemaNames = dm.getSchemas();
+            schemaNames = ArrayUtils.removeElement(schemaNames, SYSTEM_SCHEMA); // remove system schema if present
             assertEquals(1, schemaNames.length);
 
             assertEquals(SCHEMA, schemaNames[0]);
@@ -262,7 +263,7 @@ public abstract class AbstractDirectoryTest {
             map.put("password", "pass_0");
             map.put("intField", 5L);
             map.put("dateField", getCalendar(1982, 3, 25, 16, 30, 47, 0));
-            map.put("groups", Arrays.asList("members", "administrators"));
+            map.put("groups", List.of("members", "administrators"));
             DirectoryException e = assertThrows("Should not be possible to create an entry without id",
                     DirectoryException.class, () -> session.createEntry(map));
             assertEquals("Missing id", e.getMessage());
@@ -319,7 +320,7 @@ public abstract class AbstractDirectoryTest {
             dm.setProperty(SCHEMA, "password", "pass_2");
             dm.setProperty(SCHEMA, "intField", 2L);
             dm.setProperty(SCHEMA, "dateField", getCalendar(2001, 2, 3, 4, 5, 6, 7));
-            dm.setProperty(SCHEMA, "groups", Arrays.asList("administrators", "members"));
+            dm.setProperty(SCHEMA, "groups", List.of("administrators", "members"));
             session.updateEntry(dm);
         }
 
@@ -435,7 +436,7 @@ public abstract class AbstractDirectoryTest {
             assertNotNull(entry);
 
             // update an entry
-            entry.setPropertyValue("user:whateverProperty", (Serializable) Arrays.asList("members"));
+            entry.setPropertyValue("user:whateverProperty", (Serializable) List.of("members"));
             session.updateEntry(entry);
         }
     }
@@ -449,7 +450,7 @@ public abstract class AbstractDirectoryTest {
             filter.put("firstName", "f");
             DocumentModelList list = session.query(filter);
             assertEquals(1, list.size());
-            DocumentModel docModel = list.get(0);
+            DocumentModel docModel = list.getFirst();
             assertNotNull(docModel);
             assertEquals("user_1", docModel.getProperty(SCHEMA, "username"));
             assertEquals("f", docModel.getProperty(SCHEMA, "firstName"));
@@ -461,7 +462,7 @@ public abstract class AbstractDirectoryTest {
 
             list = session.query(filter, null, null, true);
             assertEquals(1, list.size());
-            docModel = list.get(0);
+            docModel = list.getFirst();
             assertNotNull(docModel);
             assertEquals("user_1", docModel.getProperty(SCHEMA, "username"));
             assertEquals("f", docModel.getProperty(SCHEMA, "firstName"));
@@ -488,7 +489,7 @@ public abstract class AbstractDirectoryTest {
             for (DocumentModel docModel : list) {
                 usernames.add((String) docModel.getProperty(SCHEMA, "username"));
             }
-            Set<String> expectedUsernames = new HashSet<>(Arrays.asList("user_1", "user_3"));
+            Set<String> expectedUsernames = new HashSet<>(List.of("user_1", "user_3"));
             assertEquals(expectedUsernames, usernames);
         }
     }
@@ -512,12 +513,13 @@ public abstract class AbstractDirectoryTest {
             filter.put("username", "admini");
             DocumentModelList list = session.query(filter, filter.keySet());
             assertEquals(1, list.size());
-            DocumentModel dm = list.get(0);
+            DocumentModel dm = list.getFirst();
             assertEquals("Administrator", dm.getProperty(SCHEMA, "username"));
         }
     }
 
     @Test
+    @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
     public void testQueryWithBuilder() throws Exception {
         try (Session session = getSession()) {
             // everything (empty predicates)
@@ -557,7 +559,7 @@ public abstract class AbstractDirectoryTest {
             // cannot filter on password
             queryBuilder = new QueryBuilder().predicate(Predicates.eq("password", "pw"));
             try {
-                session.query(queryBuilder, false);
+                session.query(queryBuilder);
                 fail("should throw");
             } catch (DirectoryException e) {
                 assertEquals("Cannot filter on password", e.getMessage());
@@ -572,7 +574,7 @@ public abstract class AbstractDirectoryTest {
             // no such column
             queryBuilder = new QueryBuilder().predicate(Predicates.eq("notAProperty", "foo"));
             try {
-                session.query(queryBuilder, false);
+                session.query(queryBuilder);
                 fail("should throw");
             } catch (QueryParseException e) {
                 assertEquals("No column: notAProperty for directory: userDirectory", e.getMessage());
@@ -592,7 +594,8 @@ public abstract class AbstractDirectoryTest {
 
     protected static void checkQueryResult(Session session, QueryBuilder queryBuilder, int expectedTotalSize,
             String... expected) {
-        DocumentModelList list = session.query(queryBuilder, false);
+        @SuppressWarnings("deprecation") // deprecated since 2021.x, remove the annotation
+        DocumentModelList list = session.query(queryBuilder);
         List<String> ids = session.queryIds(queryBuilder);
         assertIds(list, ids, expected);
         if (queryBuilder.countTotal()) {
@@ -601,7 +604,7 @@ public abstract class AbstractDirectoryTest {
     }
 
     protected static void assertIds(DocumentModelList list, List<String> ids, String... expected) {
-        Set<String> expectedIds = new HashSet<>(Arrays.asList(expected));
+        Set<String> expectedIds = new HashSet<>(List.of(expected));
         assertEquals(expectedIds, new HashSet<>(ids));
         Set<String> fromList = list.stream()
                                    .map(doc -> (String) doc.getProperty(SCHEMA, "username"))
@@ -695,8 +698,7 @@ public abstract class AbstractDirectoryTest {
     @Test
     public void testCreateFromModel() throws Exception {
         try (Session session = getSession()) {
-            String schema = "user";
-            DocumentModel entry = BaseSession.createEntryModel(null, schema, null, null);
+            DocumentModel entry = session.createEntryModel();
             entry.setProperty("user", "username", "yo");
 
             assertNull(session.getEntry("yo"));
@@ -705,13 +707,10 @@ public abstract class AbstractDirectoryTest {
 
             // create one with existing same id, must fail
             entry.setProperty("user", "username", "Administrator");
-            try {
-                assertTrue(session.hasEntry("Administrator"));
-                entry = session.createEntry(entry);
-                session.getEntry("Administrator");
-                fail("Should raise an error, entry already exists");
-            } catch (DirectoryException e) {
-            }
+            assertTrue(session.hasEntry("Administrator"));
+            var e = assertThrows(DirectoryException.class, () -> session.createEntry(entry));
+            assertEquals("Entry with id Administrator already exists in directory userDirectory", e.getMessage());
+            assertEquals(SC_CONFLICT, e.getStatusCode());
         }
     }
 
@@ -726,7 +725,7 @@ public abstract class AbstractDirectoryTest {
     @Ignore
     @Test
     @Deploy("org.nuxeo.ecm.directory.sql.tests:test-sql-directories-alteration-config.xml")
-    public void testColumnCreation() throws Exception {
+    public void testColumnCreation() {
         AbstractDirectory dirtmp1 = null;
         AbstractDirectory dirtmp2 = null;
 
@@ -737,7 +736,7 @@ public abstract class AbstractDirectoryTest {
             try (Session session = dirtmp1.getSession()) {
 
                 String schema1 = "tmpschema1";
-                DocumentModel entry = BaseSession.createEntryModel(null, schema1, null, null);
+                DocumentModel entry = session.createEntryModel();
                 entry.setProperty(schema1, "id", "john");
                 entry.setProperty(schema1, "label", "monLabel");
 
@@ -801,7 +800,7 @@ public abstract class AbstractDirectoryTest {
             // password not returned by query
             List<DocumentModel> docs = session.query(Collections.singletonMap("username", username));
             assertEquals(1, docs.size());
-            dm = docs.get(0);
+            dm = docs.getFirst();
             pw = (String) dm.getProperty(SCHEMA, "password");
             assertNull(pw);
 
@@ -819,7 +818,7 @@ public abstract class AbstractDirectoryTest {
             // password returned by query
             List<DocumentModel> docs = session.query(Collections.singletonMap("username", username));
             assertEquals(1, docs.size());
-            dm = docs.get(0);
+            dm = docs.getFirst();
             pw = (String) dm.getProperty(SCHEMA, "password");
             assertFalse(StringUtils.isBlank(pw)); // hashed password
             PasswordHelper.verifyPassword(password, pw);
@@ -830,11 +829,10 @@ public abstract class AbstractDirectoryTest {
     public void shouldFailWhenCreateDuplicateEntries() {
         try (Session session = directoryService.open("continentDirectory")) {
             Map<String, Object> continent = Map.of("id", "middle-earth", "label", "Middle Earth");
-            List<Map<String, Object>> entries = List.of(continent, continent);
-            entries.forEach(session::createEntry);
-            fail("Should raise a DirectoryException");
-        } catch (DirectoryException de) {
-            assertEquals("Entry with id middle-earth already exists in directory continentDirectory", de.getMessage());
+            session.createEntry(continent);
+            var e = assertThrows(DirectoryException.class, () -> session.createEntry(continent));
+            assertEquals("Entry with id middle-earth already exists in directory continentDirectory", e.getMessage());
+            assertEquals(SC_CONFLICT, e.getStatusCode());
         }
     }
 }
